# Ticketing-System-ver2.0

./: .gitignore  CMakeLists.txt  NEW.md  README.md  test111.txt
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: AppInfo.cpp.430FD0A6C947B817.idx  AppInfo.h.7CDCFC71322DC8F8.idx  CMakeCXXCompilerId.cpp.492B1F6D6E32A6C8.idx  CMakeCXXCompilerId.cpp.75613C92835C57D9.idx  CMakeCXXCompilerId.cpp.BB087AC47AC7B22A.idx  CircularReveal.cpp.16486C9FB93E7001.idx  CircularReveal.h.F6F9321FE1453DFF.idx  Def.h.6C0CFA35B5FB4904.idx  FileWatcher.cpp.E3B08944EAB4B9F2.idx  FileWatcher.h.3148130346BFD962.idx  FluAccentColor.cpp.F948A3C9C2960097.idx  FluAccentColor.h.855DDF197CECFCB2.idx  FluApp.cpp.00600C3C8B1672C8.idx  FluApp.h.B3550BF93FA46884.idx  FluCaptcha.cpp.3F3B870AB8B2F501.idx  FluCaptcha.h.386F03C5F6F95F91.idx  FluColors.cpp.9A2E09A8B117E9C2.idx  FluColors.h.FA2D4F96AD2146B9.idx  FluCountTimer.cpp.FF31A2BF22147186.idx  FluCountTimer.h.8D70091A7AE27559.idx  FluFrameless.cpp.13EB28DA00CF8C78.idx  FluFrameless.h.5DE15C0EA4E6F137.idx  FluHotkey.cpp.105100EE2679ECB7.idx  FluHotkey.h.5A1CE6D2212DE13F.idx  FluQrCodeItem.cpp.1B6EA35826A880E3.idx  FluQrCodeItem.h.7315B54EA5BBC0F0.idx  FluRectangle.cpp.58EB192F840A92DB.idx  FluRectangle.h.547C3BD622077230.idx  FluTableModel.cpp.ED1372C08459BF50.idx  FluTableModel.h.170406114E2CEFF2.idx  FluTableSortProxyModel.cpp.A9A6FA16375C18F7.idx  FluTableSortProxyModel.h.56D52DF2D0FE6DAD.idx  FluTextStyle.cpp.995DAAE7995F5447.idx  FluTextStyle.h.BDA75670927CB9C7.idx  FluTheme.cpp.70F7DFB249779920.idx  FluTheme.h.0A9696B80D2130BB.idx  FluTools.cpp.5BF73C0EEC00274D.idx  FluTools.h.A1799BCDBC1EA556.idx  FluTreeModel.cpp.979402A7287CDC33.idx  FluTreeModel.h.A41D968954DB647A.idx  (+279 more)
admin-app/: CMakeLists.txt  README.md  README2.0.md  admin_dashboard.cpp  admin_dashboard.h  admin_dashboard.ui  admin_login_window.cpp  admin_login_window.h  admin_login_window.ui  flightdialog.cpp  flightdialog.h  flightdialog.ui  main.cpp  network_manager.cpp  network_manager.h
client-app/: CHANGES.md  CMakeLists.txt  QML_UI_README.md  app_session.cpp  app_session.h  booking_dialog.cpp  booking_dialog.h  booking_dialog.ui  favorites_window.cpp  favorites_window.h  favorites_window.ui  main.cpp  main_qml.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myorders_window.cpp  myorders_window.h  myorders_window.ui  network_manager.cpp  network_manager.h  profile_window.cpp  profile_window.h  profile_window.ui  qml.qrc  qml_bridge.cpp  qml_bridge.h  register_window.cpp  register_window.h  register_window.ui  search_window.cpp  search_window.h  search_window.ui
client-app/.github/: copilot-instructions.md
client-app/qml/: BookingDialog.qml  CalendarPicker.qml  FavoritesWindow.qml  LoginWindow.qml  OrdersWindow.qml  ProfileWindow.qml  RegisterWindow.qml  SearchWindow.qml  main.qml
client-app/qml/components/: CalendarPicker.qml
client-app/qml/dialogs/: BookingDialog.qml
client-app/qml/pages/: LoginWindow.qml  OrdersWindow.qml  ProfileWindow.qml  RegisterWindow.qml  SearchWindow.qml
dataPrepare/scripts/: import_flights_from_csv.py
server-app/: CMakeLists.txt  database_manager.h  main.cpp  tcp_server.cpp  tcp_server.h
